--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -51,35 +51,11 @@
 #-------------------------------------------
 # Websites
 #-------------------------------------------
-# Rarely installed browsers get higher priority; It is assumed that if you
-# install a rare browser, you probably use it.  Firefox/konqueror/w3m on the
-# other hand are often only installed as fallback browsers.
-ext x?html?, has surf,             X, flag f = surf -- file://"$1"
-ext x?html?, has vimprobable,      X, flag f = vimprobable -- "$@"
-ext x?html?, has vimprobable2,     X, flag f = vimprobable2 -- "$@"
-ext x?html?, has qutebrowser,      X, flag f = qutebrowser -- "$@"
-ext x?html?, has dwb,              X, flag f = dwb -- "$@"
-ext x?html?, has jumanji,          X, flag f = jumanji -- "$@"
-ext x?html?, has luakit,           X, flag f = luakit -- "$@"
-ext x?html?, has uzbl,             X, flag f = uzbl -- "$@"
-ext x?html?, has uzbl-tabbed,      X, flag f = uzbl-tabbed -- "$@"
-ext x?html?, has uzbl-browser,     X, flag f = uzbl-browser -- "$@"
-ext x?html?, has uzbl-core,        X, flag f = uzbl-core -- "$@"
-ext x?html?, has midori,           X, flag f = midori -- "$@"
-ext x?html?, has chromium-browser, X, flag f = chromium-browser -- "$@"
-ext x?html?, has chromium,         X, flag f = chromium -- "$@"
+
+# Chrome on Linux
 ext x?html?, has google-chrome,    X, flag f = google-chrome -- "$@"
-ext x?html?, has opera,            X, flag f = opera -- "$@"
-ext x?html?, has firefox,          X, flag f = firefox -- "$@"
-ext x?html?, has seamonkey,        X, flag f = seamonkey -- "$@"
-ext x?html?, has iceweasel,        X, flag f = iceweasel -- "$@"
-ext x?html?, has epiphany,         X, flag f = epiphany -- "$@"
-ext x?html?, has konqueror,        X, flag f = konqueror -- "$@"
-ext x?html?, has elinks,            terminal = elinks "$@"
-ext x?html?, has links2,            terminal = links2 "$@"
-ext x?html?, has links,             terminal = links "$@"
-ext x?html?, has lynx,              terminal = lynx -- "$@"
-ext x?html?, has w3m,               terminal = w3m "$@"
+# Chrome on Mac
+ext x?html?, has open,             X, flag f = open -na "Google Chrome" -- "$@"
 
 #-------------------------------------------
 # Misc
@@ -90,11 +66,11 @@ mime ^text,  label pager  = "$PAGER" -- "$@"
 !mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
 !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
 
+# Show man for the file without extension?
 ext 1                         = man "$1"
-ext s[wmf]c, has zsnes, X     = zsnes "$1"
-ext s[wmf]c, has snes9x-gtk,X = snes9x-gtk "$1"
-ext nes, has fceux, X         = fceux "$1"
+# Run Win executables through wine
 ext exe                       = wine "$1"
+# Execute .makefile executables
 name ^[mM]akefile$            = make
 
 #--------------------------------------------
@@ -110,25 +86,8 @@ ext php = php -- "$1"
 #--------------------------------------------
 # Audio without X
 #-------------------------------------------
-mime ^audio|ogg$, terminal, has mpv      = mpv -- "$@"
-mime ^audio|ogg$, terminal, has mplayer2 = mplayer2 -- "$@"
-mime ^audio|ogg$, terminal, has mplayer  = mplayer -- "$@"
-ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
-
-#--------------------------------------------
-# Video/Audio with a GUI
-#-------------------------------------------
-mime ^video|audio, has gmplayer, X, flag f = gmplayer -- "$@"
-mime ^video|audio, has smplayer, X, flag f = smplayer "$@"
-mime ^video,       has mpv,      X, flag f = mpv -- "$@"
-mime ^video,       has mpv,      X, flag f = mpv --fs -- "$@"
-mime ^video,       has mplayer2, X, flag f = mplayer2 -- "$@"
-mime ^video,       has mplayer2, X, flag f = mplayer2 -fs -- "$@"
-mime ^video,       has mplayer,  X, flag f = mplayer -- "$@"
-mime ^video,       has mplayer,  X, flag f = mplayer -fs -- "$@"
-mime ^video|audio, has vlc,      X, flag f = vlc -- "$@"
-mime ^video|audio, has totem,    X, flag f = totem -- "$@"
-mime ^video|audio, has totem,    X, flag f = totem --fullscreen -- "$@"
+# Ideal config, but currently doesn't work on Macos without unix domain socket availability
+# mime ^audio|ogg$, terminal, has mpd, has mpc = mpc insert -- "$@" && mpc next
 
 #--------------------------------------------
 # Video without X:
@@ -137,21 +96,29 @@ mime ^video, terminal, !X, has mpv       = mpv -- "$@"
 mime ^video, terminal, !X, has mplayer2  = mplayer2 -- "$@"
 mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 
+#--------------------------------------------
+# Video/Audio with a GUI
+#-------------------------------------------
+# VLC on Linux
+mime ^video|audio|ogg$,  has vlc, X, flag f = vlc -- "$@"
+# VLC on Mac
+mime ^video|audio|ogg$,  has open, X, flag f = open -a VLC -- "$@"
+
 #-------------------------------------------
 # Documents
 #-------------------------------------------
-ext pdf, has llpp,     X, flag f = llpp "$@"
-ext pdf, has zathura,  X, flag f = zathura -- "$@"
-ext pdf, has mupdf,    X, flag f = mupdf "$@"
-ext pdf, has mupdf-x11,X, flag f = mupdf-x11 "$@"
-ext pdf, has apvlv,    X, flag f = apvlv -- "$@"
-ext pdf, has xpdf,     X, flag f = xpdf -- "$@"
-ext pdf, has evince,   X, flag f = evince -- "$@"
-ext pdf, has atril,    X, flag f = atril -- "$@"
-ext pdf, has okular,   X, flag f = okular -- "$@"
-ext pdf, has epdfview, X, flag f = epdfview -- "$@"
-ext pdf, has qpdfview, X, flag f = qpdfview "$@"
-ext pdf, has open,     X, flat f = open "$@"
+# ext pdf, has llpp,     X, flag f = llpp "$@"
+# ext pdf, has zathura,  X, flag f = zathura -- "$@"
+# ext pdf, has mupdf,    X, flag f = mupdf "$@"
+# ext pdf, has mupdf-x11,X, flag f = mupdf-x11 "$@"
+# ext pdf, has apvlv,    X, flag f = apvlv -- "$@"
+# ext pdf, has xpdf,     X, flag f = xpdf -- "$@"
+# ext pdf, has evince,   X, flag f = evince -- "$@"
+# ext pdf, has atril,    X, flag f = atril -- "$@"
+# ext pdf, has okular,   X, flag f = okular -- "$@"
+# ext pdf, has epdfview, X, flag f = epdfview -- "$@"
+# ext pdf, has qpdfview, X, flag f = qpdfview "$@"
+ext pdf, has open, flat f = open "$@"
 
 ext docx?, has catdoc,       terminal = catdoc -- "$@" | "$PAGER"
 
@@ -184,6 +151,7 @@ mime ^image, has eom,       X, flag f = eom -- "$@"
 mime ^image, has nomacs,    X, flag f = nomacs -- "$@"
 mime ^image, has geeqie,    X, flag f = geeqie -- "$@"
 mime ^image, has gimp,      X, flag f = gimp -- "$@"
+mime ^image, has preview,   X, flag f = preview -- "$@"
 ext xcf,                    X, flag f = gimp -- "$@"
 
 #-------------------------------------------
