Enabled connection to mpd through unix domain socket

--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -1,3 +1,5 @@
+# TODO, prettify the config by copying stuff from: https://github.com/andrewrk/mpd/blob/master/doc/mpdconf.example
+
 music_directory "~/Music/Library"
 
 # Metadata location
@@ -35,16 +37,11 @@ decoder {
  enabled "no"
 }
 
-# bind_to_address "any"
-# bind_to_address "0.0.0.0"
-bind_to_address "::1"
-# bind_to_address "127.0.0.1"
-# bind_to_address "/private/var/run/mpd/socket"
+# Using Unix Domain Socket connection in favor of tcp options,
+# since it's the only way to make it accessible to multiple clients at the same time (e.g. ncmpcpp, mcp).
+# And it also to connect externally using mobile app as a remote.
+bind_to_address "~/.config/mpd/mpd.socket"
 port "6600"
-# user "sviat"
-# user "root"
-# group "root"
-
 
 # Visualizer
 audio_output {
