Added GUI option for opening up markdown files on a Mac

--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -58,13 +58,21 @@ ext x?html?, has google-chrome,    X, flag f = google-chrome -- "$@"
 ext x?html?, has open,             X, flag f = open -na "Google Chrome" -- "$@"
 
 #-------------------------------------------
-# Misc
+# Text
 #-------------------------------------------
-# Define the "editor" for text files as first action
+
+# Use the "editor"(e.g. vim) for text files as 1st (default) option
 mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
+!mime ^text, label editor, ext md|xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
+
+# Use GUI app as the 2nd option
+ext md, label Marked, has open, X, flag f = open -a /Applications/Marked.app -- "$@" # Mac: view through Marked.app
+# ext md, label Marked, !has open, X, flag f = XXXXX -- "$@" # Linux: TBD
+
+# Define pager for text files as the 3d option, typically in use for pipeing
+!mime ^text, label pager,  ext md|xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
 mime ^text,  label pager  = "$PAGER" -- "$@"
-!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
-!mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
+
 
 # Show man for the file without extension?
 ext 1                         = man "$1"
