--- a/mpd/mpd.linux.conf
+++ b/mpd/mpd.linux.conf
@@ -19,23 +19,23 @@ follow_outside_symlinks "yes"
 follow_inside_symlinks "yes"
 
 
-audio_output {
-  name "default"
-  # Linux device
-  type "ao"
-  # Macos device
-  # type "osx"
-  # name "CoreAudio"
-  mixer_type "hardware"
-  # mixer_type "software"
-   audio_buffer_size "8192"
-   buffer_before_play "50%"
-  }
-  
-decoder {
-   plugin "mp4ff"
-   enabled "no"
-}
+# audio_output {
+#  name "default"
+# # Linux device
+# # type "ao"
+# # Macos device
+#  type "osx"
+# # name "CoreAudio"
+# mixer_type "hardware"
+# # mixer_type "software"
+#  audio_buffer_size "8192"
+#  buffer_before_play "50%"
+# }
+# 
+# decoder {
+#  plugin "mp4ff"
+#  enabled "no"
+# }
 
 # Using Unix Domain Socket connection in favor of tcp options,
 # since it's the only way to make it accessible to multiple clients at the same time (e.g. ncmpcpp, mcp).
