--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -28,7 +28,7 @@ mpd_connection_timeout = 5
 #
 ## Needed for tag editor and file operations to work.
 ##
-mpd_music_dir = ~/Music/Library
+mpd_music_dir = "~/SERVER/Music"
 #
 #mpd_crossfade_time = 5
 #
