Added override of Helvetica -> Helvetica Neue to fix font rendering issue

--- a/fonts/fonts.conf
+++ b/fonts/fonts.conf
@@ -20,6 +20,14 @@
   <prefer><family>Monaco</family></prefer>
 </alias>
 
+<!--Font overrides-->
+<match>
+  <test name="family"><string>Helvetica</string></test>
+  <edit name="family" mode="assign" binding="strong">
+      <string>Helvetica Neue</string>
+  </edit>
+</match>
+
 <!---The autohinter attempts to do automatic hinting and disregards any existing hinting information. It does work better with fonts that have broken or no hinting information but it will be strongly sub-optimal for fonts with good hinting information. Generally common fonts are of the later kind so autohinter will not be useful.-->
 
 <match target="font">
