--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -62,8 +62,8 @@ ext x?html?, has open,             X, flag f = open -na "Google Chrome" -- "$@"
 #-------------------------------------------
 
 # Use the "editor"(e.g. vim) for text files as 1st (default) option
+mime ^text, ext txt, has emacs, label editor = emacs -- "$@" 
 mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
-mime ^text, has emacs, label editor = emacs -- "$@"
 !mime ^text, label editor, ext md|xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
 
 # Use GUI app as the 2nd option
