--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -62,7 +62,7 @@ ext x?html?, has open,             X, flag f = open -na "Google Chrome" -- "$@"
 #-------------------------------------------
 
 # Use the "editor"(e.g. vim) for text files as 1st (default) option
-mime ^text, ext txt, has emacs, label editor = emacs -- "$@" 
+mime ^text, ext txt, has emacs, label editor = emacs -nw -- "$@" 
 mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
 !mime ^text, label editor, ext md|xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
 
