--- a/polybar/config
+++ b/polybar/config
@@ -30,7 +30,8 @@ alert = #bd2c40
 [bar/example]
 monitor = ${env:MONITOR:}
 width = 100%
-height = 27
+dpi = 220
+height = 50
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 6.0
@@ -61,6 +62,8 @@ modules-right = powermenu filesystem xbacklight alsa pulseaudio memory cpu batte
 
 tray-position = right
 tray-padding = 2
+tray-scale = 3.0
+tray-maxsize = 48
 ;tray-transparent = true
 ;tray-background = #0063ff
 
