Fixed enourmous tray icons

--- a/polybar/desktop.config
+++ b/polybar/desktop.config
@@ -62,8 +62,8 @@ modules-right = powermenu filesystem xbacklight alsa pulseaudio memory cpu batte
 
 tray-position = right
 tray-padding = 2
-tray-scale = 3.0
-tray-maxsize = 48
+; tray-scale = 3.0
+; tray-maxsize = 16
 ;tray-transparent = true
 ;tray-background = #0063ff
 
