Updated i3 configuration used with the laptop

--- a/i3/laptop.config
+++ b/i3/laptop.config
@@ -2,34 +2,21 @@
   ###---Variables---###
 
     ###---Monitors and workspaces---###
-
-      # Define outputs as monitors
-      set $monitor1 DP-1
-      set $monitor2 HDMI-0
+      set $monitor "eDP-1"
 
       # Define workspaces
-      set $ws1 "A1"
-      set $ws2 "B1"
-      set $ws3 "C1"
-      set $ws4 "D1"
-      set $ws5 "E1"
-      set $ws6 "A2"
-      set $ws7 "B2"
-      set $ws8 "C2"
-      set $ws9 "D2"
-      set $ws0 "E2"
+      set $ws1 "A"
+      set $ws2 "B"
+      set $ws3 "C"
+      set $ws4 "D"
+      set $ws5 "E"
 
       # Assign workspaces to monitors 
-      workspace $ws1 output $monitor1
-      workspace $ws2 output $monitor1
-      workspace $ws3 output $monitor1
-      workspace $ws4 output $monitor1
-      workspace $ws5 output $monitor1
-      workspace $ws6 output $monitor2
-      workspace $ws7 output $monitor2
-      workspace $ws8 output $monitor2
-      workspace $ws9 output $monitor2
-      workspace $ws0 output $monitor2
+      workspace $ws1 output $monitor 
+      workspace $ws2 output $monitor 
+      workspace $ws3 output $monitor 
+      workspace $ws4 output $monitor 
+      workspace $ws5 output $monitor 
 
     ###---Colors---###
       set $green      #99f99c
@@ -117,11 +104,11 @@
     bindsym $mod+Right focus right
     
     # switch to workspace
-    bindsym $mod+1 workspace $ws1, workspace $ws6
-    bindsym $mod+2 workspace $ws2, workspace $ws7
-    bindsym $mod+3 workspace $ws3, workspace $ws8
-    bindsym $mod+4 workspace $ws4, workspace $ws9
-    bindsym $mod+5 workspace $ws5, workspace $ws0
+    bindsym $mod+1 workspace $ws1
+    bindsym $mod+2 workspace $ws2
+    bindsym $mod+3 workspace $ws3
+    bindsym $mod+4 workspace $ws4
+    bindsym $mod+5 workspace $ws5
 
   ###---Move windows---###
     # move focused window
@@ -142,12 +129,6 @@
     bindsym $mod+Shift+3 move container to workspace $ws3
     bindsym $mod+Shift+4 move container to workspace $ws4
     bindsym $mod+Shift+5 move container to workspace $ws5
-    bindsym $mod+Shift+6 move container to workspace $ws6
-    bindsym $mod+Shift+7 move container to workspace $ws7
-    bindsym $mod+Shift+8 move container to workspace $ws8
-    bindsym $mod+Shift+9 move container to workspace $ws9
-    bindsym $mod+Shift+0 move container to workspace $ws0
-
 
   ###---Resize windows---###
     # resize window (you can also use the mouse for that)
@@ -229,8 +210,6 @@
 
 
 ###---Starting External Scripts---###
-  # Start xrandr to configure multi-monitor setup
-  exec --no-startup-id xrandr --output $monitor2 --right-of $monitor1 --auto
 
   # Load configuration from .Xresources
   exec_always --no-startup-id xrdb $HOME/.config/.Xresources;
