Updated some of the general settings, including ability to persits tabs between multiple sessions and see folder names next to each tab

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -103,7 +103,7 @@ set iterm2_font_width 8
 set iterm2_font_height 11
 
 # Use a unicode "..." character to mark cut-off filenames?
-set unicode_ellipsis false
+set unicode_ellipsis true
 
 # Show dotfiles in the bookmark preview box?
 set show_hidden_bookmarks true
@@ -132,7 +132,7 @@ set draw_progress_bar_in_status_bar true
 set draw_borders false
 
 # Display the directory name in tabs?
-set dirname_in_tabs false
+set dirname_in_tabs true
 
 # Enable the mouse support?
 set mouse_enabled true
@@ -145,7 +145,7 @@ set display_size_in_status_bar true
 set display_tags_in_all_columns true
 
 # Set a title for the window?
-set update_title false
+set update_title true
 
 # Set the title to "ranger" in the tmux program?
 set update_tmux_title false
@@ -240,14 +240,14 @@ set clear_filters_on_dir_change false
 set line_numbers false
 
 # Start line numbers from 1 instead of 0
-set one_indexed false
+set one_indexed true
 
 # Save tabs on exit
-set save_tabs_on_exit false
+set save_tabs_on_exit true
 
 # Enable scroll wrapping - moving down while on the last item will wrap around to
 # the top and vice versa.
-set wrap_scroll false
+set wrap_scroll true
 
 # Set the global_inode_type_filter to nothing.  Possible options: d, f and l for
 # directories, files and symlinks respectively.
