Configured screen brightness controls

--- a/polybar/laptop.config
+++ b/polybar/laptop.config
@@ -58,7 +58,7 @@ font-2 = siji:pixelsize=10;1
 
 modules-left = bspwm i3 xwindow
 modules-center = 
-modules-right = powermenu filesystem xbacklight alsa pulseaudio memory cpu battery temperature xkeyboard eth wlan date
+modules-right = powermenu filesystem screen alsa pulseaudio memory cpu battery temperature xkeyboard eth wlan date
 
 tray-position = right
 tray-padding = 2
@@ -191,25 +191,21 @@ icon-next = 
 label-song-maxlen = 25
 label-song-ellipsis = true
 
-[module/xbacklight]
-type = internal/xbacklight
+[module/screen]
+type = custom/script
 
-format = <label> <bar>
-label = BL
+exec = light -G
+scroll-up = light -A 5
+scroll-down = light -U 5
+interval = 0.1
 
-bar-width = 10
-bar-indicator = |
-bar-indicator-foreground = #fff
-bar-indicator-font = 2
-bar-fill = ─
-bar-fill-font = 2
-bar-fill-foreground = #9f78e1
-bar-empty = ─
-bar-empty-font = 2
-bar-empty-foreground = ${colors.foreground-alt}
+format-prefix = "Brightness: "
+
+label = %output%
+; label-foreground = ${colors.fg}
+format-padding = 1
 
 [module/backlight-acpi]
-inherit = module/xbacklight
 type = internal/backlight
 card = intel_backlight
 
