--- a/i3/laptop.config
+++ b/i3/laptop.config
@@ -176,7 +176,11 @@
   bindsym $mod+F3 exec "killall compton"; reload ; restart
   # Exit i3 (logs you out of your X session)
   bindsym $mod+F4 exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
-  
+
+  # Sreen brightness controls
+  bindsym XF86MonBrightnessUp exec light -A 5 # increase screen brightness
+  bindsym XF86MonBrightnessDown exec light -U 5 # decrease screen brightness 
+
 ###---Application bindings---###
   # Start a terminal
   bindsym $mod+Return exec $term
