--- a/i3/laptop.config
+++ b/i3/laptop.config
@@ -220,6 +220,10 @@
   
   # Start compton to enable transitions, transparency and other effects
   exec_always compton --config $HOME/.config/i3/compton.conf
+
+  # Engage tap for click with the touchpad
+  # E.g. xinput set-prop <device-id> <property-id> value
+  exec_always --no-startup-id exec xinput set-prop 13 284 1
   
   # Start owncloud client to sync all working directory files
   exec --no-startup-id owncloud
@@ -238,5 +242,3 @@
 
   # Start i3-appmenu-service to extact menus from all desktop apps
   exec_always --no-startup-id exec $HOME/.config/scripts/i3-appmenu-service.py
-
-
