Changed accelaration curve for the touchpad

--- a/i3/laptop.config
+++ b/i3/laptop.config
@@ -221,9 +221,12 @@
   # Start compton to enable transitions, transparency and other effects
   exec_always compton --config $HOME/.config/i3/compton.conf
 
-  # Engage tap for click with the touchpad
+  # Start touchpad configurations
   # E.g. xinput set-prop <device-id> <property-id> value
-  exec_always --no-startup-id exec xinput set-prop 13 284 1
+    # Enable tap for click with the touchpad
+    exec_always --no-startup-id exec xinput set-prop 13 284 1
+    # Change accelleration speed of the touchpad
+    exec_always --no-startup-id exec xinput set-prop 13 304 1.0
   
   # Start owncloud client to sync all working directory files
   exec --no-startup-id owncloud
