Added integration with rescuetime

--- a/polybar/laptop.config
+++ b/polybar/laptop.config
@@ -62,7 +62,7 @@ modules-right = powermenu filesystem screen alsa pulseaudio memory cpu battery t
 
 tray-position = right
 tray-padding = 2
-tray-scale = 3.0
+; tray-scale = 3.0
 tray-maxsize = 48
 ;tray-transparent = true
 ;tray-background = #0063ff
