Integrated with teiler - screenshot/screencast tool

--- a/i3/laptop.config
+++ b/i3/laptop.config
@@ -195,8 +195,10 @@
     bindsym $alt+2 exec "rofi -modi 'clipboard:greenclip print' -show clipboard -run-command '{cmd}'"
     # Search through bookmarks
     bindsym $alt+3 exec "buku_run"
+    # Show screenshot/screencast options
+    bindsym $alt+4 exec "teiler"
     # Start ssh session
-    bindsym $alt+4 exec "rofi -modi ssh -show ssh"
+    bindsym $alt+5 exec "rofi -modi ssh -show ssh"
 
     # List available wifi networks
     # bindsym $alt+3 exec "tty-pipe nmcli device wifi | out2html -p | rofi -dmenu -markup-rows"
