Disabled display of alsa widget in favor of pulseaudio

--- a/polybar/laptop.config
+++ b/polybar/laptop.config
@@ -58,12 +58,12 @@ font-2 = siji:pixelsize=10;1
 
 modules-left = bspwm i3 xwindow
 modules-center = 
-modules-right = powermenu filesystem screen alsa pulseaudio memory cpu battery temperature xkeyboard eth wlan date
+modules-right = powermenu filesystem screen pulseaudio memory cpu battery temperature xkeyboard eth wlan date
 
 tray-position = right
-tray-padding = 2
-; tray-scale = 3.0
-tray-maxsize = 48
+tray-padding = 20
+tray-scale = 1.0
+tray-maxsize = 40
 ;tray-transparent = true
 ;tray-background = #0063ff
 
