--- a/i3/laptop.config
+++ b/i3/laptop.config
@@ -182,9 +182,9 @@
   bindsym XF86MonBrightnessDown exec light -U 5 # decrease screen brightness 
 
   # Pulse Audio controls
-  bindsym XF86AudioRaiseVolume exec "pactl set-sink-volume 0 +5%" # increase volume
-  bindsym XF86AudioLowerVolume exec "pactl set-sink-volume 0 -5%" # decrease volume
-  bindsym XF86AudioMute exec "pactl set-sink-mute 0 toggle" # toggle mute
+  bindsym XF86AudioRaiseVolume exec "pactl set-sink-volume 0 +5%"
+  bindsym XF86AudioLowerVolume exec "pactl set-sink-volume 0 -5%"
+  bindsym XF86AudioMute exec "pactl set-sink-mute 0 toggle"
 
 ###---Application bindings---###
   # Start a terminal
