Changed default editor to emacsclient

--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -61,8 +61,9 @@ ext x?html?, has open,             X, flag f = open -na "Google Chrome" -- "$@"
 # Text
 #-------------------------------------------
 
-# Use the "editor"(e.g. vim) for text files as 1st (default) option
-mime ^text, ext txt, has emacs, label editor = emacs -nw -- "$@" 
+# Use the "editor"(e.g. vim or emacs) for text files as 1st (default) option
+# Temporarily commented to test out emacsclient as the $EDITOR
+# mime ^text, ext txt, has emacs, label editor = emacs -nw -- "$@"
 mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
 !mime ^text, label editor, ext md|xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
 
