--- a/polybar/desktop.config
+++ b/polybar/desktop.config
@@ -34,7 +34,8 @@ dpi = 80
 height = 20
 ;offset-x = 1%
 ;offset-y = 1%
-radius = 6.0
+offset-y = 0%
+radius = 0
 fixed-center = false
 
 background = ${colors.background}
@@ -43,7 +44,7 @@ foreground = ${colors.foreground}
 line-size = 3
 line-color = #f00
 
-border-size = 4
+border-size = 0 
 border-color = #00000000
 
 padding-left = 0
@@ -58,7 +59,7 @@ font-2 = siji:pixelsize=10;1
 
 modules-left = bspwm i3 xwindow
 modules-center = 
-modules-right = powermenu filesystem xbacklight alsa pulseaudio memory cpu battery temperature xkeyboard eth wlan date
+modules-right = powermenu filesystem xbacklight pulseaudio memory cpu battery temperature xkeyboard eth wlan date
 
 tray-position = right
 tray-padding = 2
