Switched over to emacs as primary system editor

--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -65,7 +65,7 @@ ext x?html?, has open,             X, flag f = open -na "Google Chrome" -- "$@"
 # Temporarily commented to test out emacsclient as the $EDITOR
 # mime ^text, ext txt, has emacs, label editor = emacs -nw -- "$@"
 mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
-!mime ^text, label editor, ext md|xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
+!mime ^text, label editor, ext txt|md|xml|json|csv|tex|py|pl|rb|js|sh|php = ${VISUAL:-$EDITOR} -- "$@"
 
 # Use GUI app as the 2nd option
 ext md, label Marked, has open, X, flag f = open -a /Applications/Marked.app -- "$@" # Mac: view through Marked.app
