--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -8,7 +8,7 @@
 # be disabled and audio files will only be accepted over ipc socket (using
 # file:// protocol) or streaming files over an accepted protocol.
 #
-music_directory "~/SERVER/Music"
+music_directory "~/cloud/Music"
 #
 # This setting sets the MPD internal playlist directory. The purpose of this
 # directory is storage for playlists created by MPD. The server will use 
