Minor bug fixes in the i3 config

--- a/i3/desktop.config
+++ b/i3/desktop.config
@@ -235,16 +235,16 @@
   exec --no-startup-id xrandr --output $monitor2 --right-of $monitor1 --auto
 
   # Load configuration from .Xresources
-  exec_always --no-startup-id xrdb $HOME/.config/.Xresources;
+  exec_always --no-startup-id xrdb $HOME/.config/xorg/Xresources
   
   # Start compton to enable transitions, transparency and other effects
   exec_always compton --config $HOME/.config/i3/compton.conf
   
   # Start owncloud client to sync all working directory files
-  exec --no-startup-id owncloud
+  exec --no-startup-id nextcloud
 
   # Start pulseaudio, general purpose sound server
-  exec_always pulseaudio
+  exec pulseaudio
   
   # Start mpd, music player daemon:
   exec --no-startup-id mpd
