--- a/i3/laptop.config
+++ b/i3/laptop.config
@@ -223,7 +223,7 @@
 ###---Starting External Scripts---###
 
   # Load configuration from .Xresources
-  exec_always --no-startup-id xrdb $HOME/.config/.Xresources;
+  exec_always --no-startup-id xrdb $HOME/.config/.Xresources
   
   # Start compton to enable transitions, transparency and other effects
   exec_always compton --config $HOME/.config/i3/compton.conf
@@ -236,10 +236,10 @@
     exec_always --no-startup-id exec xinput set-prop 13 304 1.0
   
   # Start owncloud client to sync all working directory files
-  exec --no-startup-id owncloud
+  exec --no-startup-id nextcloud
 
   # Start pulseaudio, general purpose sound server
-  exec_always pulseaudio
+  exec pulseaudio
   
   # Start mpd, music player daemon:
   exec --no-startup-id mpd
