Fixed cyryllic rendering issues with monospace font

--- a/greenclip.cfg
+++ b/greenclip.cfg
@@ -4,6 +4,5 @@ Config {
  staticHistoryPath = "~/.cache/greenclip.staticHistory",
  imageCachePath = "/tmp/",
  usePrimarySelectionAsInput = False,
- blacklistedApps = [],
- trimSpaceFromSelection = True
+ blacklistedApps = []
 }
