Added integration with the lock screen

--- a/i3/desktop.config
+++ b/i3/desktop.config
@@ -5,7 +5,7 @@
 
       # Define outputs as monitors
       set $monitor1 DP-1
-      set $monitor2 HDMI-0
+      set $monitor2 DP-2
 
       # Define workspaces
       set $ws1 "A1"
@@ -221,6 +221,9 @@
   bindsym $mod+Shift+T exec chromium
   # Start a file manager
   bindsym $mod+Shift+R exec $term -e ranger
+
+  # Lock the screen
+  bindsym $mod+Ctrl+L exec i3lock-fancy -- scrot -z
 
   # start dmenu (a program launcher)
   bindsym $mod+d exec dmenu_run
