--- a/i3/desktop.config
+++ b/i3/desktop.config
@@ -195,6 +195,11 @@
   bindsym $mod+F3 exec "killall compton"; reload ; restart
   # Exit i3 (logs you out of your X session)
   bindsym $mod+F4 exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+
+  # Pulse Audio controls
+  bindsym XF86AudioRaiseVolume exec "pactl set-sink-volume 0 +5%"
+  bindsym XF86AudioLowerVolume exec "pactl set-sink-volume 0 -5%"
+  bindsym XF86AudioMute exec "pactl set-sink-mute 0 toggle"
   
 ###---Application bindings---###
   # Start a terminal
