Added screenlock keybinding for the laptop i3 config

--- a/i3/laptop.config
+++ b/i3/laptop.config
@@ -212,6 +212,9 @@
   # Start a file manager
   bindsym $mod+Shift+R exec $term -e ranger
 
+  # Lock a screen
+  bindsym $mod+Ctrl+L exec i3lock-fancy -- scrot -z
+
   # start dmenu (a program launcher)
   bindsym $mod+d exec dmenu_run
   # There also is the (new) i3-dmenu-desktop which only displays applications
