Updated video outputs

--- a/i3/desktop.config
+++ b/i3/desktop.config
@@ -4,8 +4,8 @@
     ###---Monitors and workspaces---###
 
       # Define outputs as monitors
-      set $monitor1 DP-1
-      set $monitor2 DP-2
+      set $monitor1 "DP-1"
+      set $monitor2 "HDMI-0"
 
       # Define workspaces
       set $ws1 "A1"
