Fixed i3's split h/v keybindings

--- a/i3/desktop.config
+++ b/i3/desktop.config
@@ -75,7 +75,7 @@
     bindsym $mod+Shift+q kill
     
     # split in horizontal orientation
-    bindsym $mod+h split h
+    bindsym $mod+$alt+v split h
     
     # split in vertical orientation
     bindsym $mod+v split v
