Updated property ids for trackpad configuration in laptop config

--- a/i3/laptop.config
+++ b/i3/laptop.config
@@ -235,9 +235,11 @@
   # Start touchpad configurations
   # E.g. xinput set-prop <device-id> <property-id> value
     # Enable tap for click with the touchpad
-    exec_always --no-startup-id exec xinput set-prop 13 284 1
+    exec_always --no-startup-id exec xinput set-prop 13 290 1
+    # Enable Tapping and Dragging
+    exec_always --no-startup-id exec xinput set-prop 13 292 1
     # Change accelleration speed of the touchpad
-    exec_always --no-startup-id exec xinput set-prop 13 304 1.0
+    exec_always --no-startup-id exec xinput set-prop 13 310 1.0
   
   # Start owncloud client to sync all working directory files
   exec --no-startup-id nextcloud
