--- a/i3/desktop.config
+++ b/i3/desktop.config
@@ -8,16 +8,16 @@
       set $monitor2 "HDMI-0"
 
       # Define workspaces
-      set $ws1 "A1"
-      set $ws2 "B1"
-      set $ws3 "C1"
-      set $ws4 "D1"
-      set $ws5 "E1"
-      set $ws6 "A2"
-      set $ws7 "B2"
-      set $ws8 "C2"
-      set $ws9 "D2"
-      set $ws0 "E2"
+      set $ws1 "1A"
+      set $ws2 "2A"
+      set $ws3 "3A"
+      set $ws4 "4A"
+      set $ws5 "5A"
+      set $ws6 "1B"
+      set $ws7 "2B"
+      set $ws8 "3B"
+      set $ws9 "4B"
+      set $ws0 "5B"
 
       # Assign workspaces to monitors 
       workspace $ws1 output $monitor1
