Polybar: added label and styling when no window is in focus

--- a/polybar/modules/xwindow.ini
+++ b/polybar/modules/xwindow.ini
@@ -3,3 +3,5 @@ label = "%title%  "
 label-maxlen = 75
 format-foreground=${colors.left-stripe2-foreground}
 format-background=${colors.left-stripe2-background}
+label-empty = 
+label-empty-foreground = 
