Polybar: removed stop control from mpd

--- a/polybar/modules/mpd.ini
+++ b/polybar/modules/mpd.ini
@@ -1,5 +1,5 @@
 type = internal/mpd
-format-online = <icon-prev> <toggle> <icon-stop> <icon-next> <label-song>
+format-online = <icon-prev> <toggle> <icon-next> <label-song>
 
 icon-prev = " "
 icon-stop = " "
