Added company mode to selected packages in emacs

--- a/i3/desktop.config
+++ b/i3/desktop.config
@@ -5,7 +5,7 @@
 
       # Define outputs as monitors
       set $monitor1 "DP-1"
-      set $monitor2 "HDMI-0"
+      set $monitor2 "DP-2"
 
       # Define workspaces
       set $ws1 "1A"
