Introduced pomodoro timer as menubar widget

--- a/i3/desktop.config
+++ b/i3/desktop.config
@@ -186,6 +186,12 @@
   bindsym $alt+Shift+4 exec setxkbmap -layout pl # Polish
   bindsym $alt+Shift+5 exec setxkbmap -layout es # Spanish
 
+###---Menubar bindings---###
+  # Pomodoro controls
+  bindsym $alt+Shift+F1 exec "python ~/.config/polybar/modules/pomodoro/pomodoro.py --action=new"
+  bindsym $alt+Shift+F2 exec "python ~/.config/polybar/modules/pomodoro/pomodoro.py --action=break"
+  bindsym $alt+Shift+F3 exec "python ~/.config/polybar/modules/pomodoro/pomodoro.py --action=kill"
+
 
 ###---System bindings---###
 
