--- a/polybar/desktop.config
+++ b/polybar/desktop.config
@@ -58,6 +58,9 @@ include-file = /home/sviat/.config/polybar/modules/date.ini
 [module/pulseaudio]
 include-file = /home/sviat/.config/polybar/modules/pulseaudio.ini
 
+[module/pomodoro]
+include-file = /home/sviat/.config/polybar/modules/pomodoro/pomodoro.ini
+
 [module/temperature]
 include-file = /home/sviat/.config/polybar/modules/temperature.ini
 
