--- a/polybar/bars/main.ini
+++ b/polybar/bars/main.ini
@@ -1,4 +1,5 @@
 monitor = ${env:MONITOR:}
+enable-ipc = true
 radius = 0
 dpi = 80
 
@@ -31,7 +32,7 @@ font-2 = "Iosevka Nerd Font:style=Medium:size=15;3"
 tray-position = 
 fixed-center = true
 modules-left = i3 left1 xwindow left2 xkeyboard left3
-modules-center = center1 date mpd center2
+modules-center = center1 pomodoro date mpd center2
 modules-right = right1 cpu memory fs_root fs_home pulseaudio temperature eth wlan
 
 cursor-click = pointer
