i3: Added 5px inner gap to tiles with desktop config

--- a/i3/desktop.config
+++ b/i3/desktop.config
@@ -5,7 +5,7 @@
 
       # Define outputs as monitors
       set $monitor1 "DP-1"
-      set $monitor2 "DP-2"
+      set $monitor2 "HDMI-0"
 
       # Define workspaces
       set $ws1 "1A"
@@ -53,7 +53,7 @@
     font pango:Monaco 8
     
     # Set gaps around windows to be:
-    gaps inner 0
+    gaps inner 5
     gaps outer 0
 
     # Set border settings:
@@ -61,7 +61,7 @@
 
     # Set colors to be:
     # class                 border          background          text          indicator         child_border
-    client.focused          transparent       $darkgrey               $black        $grey             transparent
+    client.focused          transparent     $darkgrey           $black        $grey             transparent
     client.focused_inactive #333333         #5f676a             #ffffff       #484e50           #5f676a
     client.unfocused        #333333         #222222             #888888       #292d2e           #222222
     client.urgent           #2f343a         #900000             #ffffff       #900000           #900000
